# m1-gpu-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Metal-Feature-Set-Tables.numbers  MetalAdder.cpp  MetalAdder.hpp  README.md  demo.py  main.cpp  pyproject.toml  wave_demo.py
.github/workflows/: ci.yml
01-MetalAdder/: MetalAdder.hpp  main.cpp
02-GeneralArrayOperations/: CPUOperations.cpp  CPUOperations.hpp  MetalOperations.cpp  MetalOperations.hpp  chaining_operators.cpp  main.cpp  main_chaining.cpp  ops.metal
03-2DKernels/: CPUOperations.cpp  CPUOperations.hpp  MetalOperations.cpp  MetalOperations.hpp  main.cpp  ops.metal
04-Compute/: ops.metal
05-WavePropagation/: ops.metal
paper/: paper_benchmark_02.cpp  paper_benchmark_03.cpp  plot_1d_operators.py  plot_2d_operators.py
python/: __init__.py  _m1_gpu_ops.pyi  bindings.cpp
scripts/: render_notebooks.py
tests/: test_01_adder.cpp  test_02_1d_ops.cpp  test_03_2d_ops.cpp
