[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "m1-gpu-ops"
version = "0.1.0"
description = "Metal GPU operations for scientific computing on Apple Silicon"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
