[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "m1-gpu-ops"
version = "0.1.0"
description = "Metal GPU operations for scientific computing on Apple Silicon"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Jupytext light-format notebooks: multi-import lines, late imports inside cells,
# isort order, long comment/markdown lines, semicolon-separated statements,
# lambda assignments, and unused intermediate variables are all expected.
"demo.py"      = ["E401", "E402", "E501", "E702", "E731", "F841", "I001"]
"wave_demo.py" = ["E401", "E402", "E501", "E702", "E731", "F841", "I001"]

# ---------------------------------------------------------------------------
# Ty — type checker
# ---------------------------------------------------------------------------

[tool.ty.environment]
python-version = "3.9"
